corrected projects to align with figma design

--- a/style/projects_list.css
+++ b/style/projects_list.css
@@ -13,7 +13,84 @@
     margin-left: 1.5rem;
 }
 
+.h3-style {
+    font-weight: bold;
+    font-size: 48px;
+    margin-bottom: 2%;
+}
+
+.project-windows {
+    padding-bottom: 2%;
+}
+
+.project-windows-active {
+    color: #44197E;
+    padding-right: 5%;
+}
+
+.project-windows-inactive {
+    color: #ADB5BD;
+}
+
+#client-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    width: 98%;
+}
+
+#client-header div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#client-buttons { 
+    display: flex;
+    flex-direction: row;
+    height: 50%;
+}
+
 .btn-projects {
     text-decoration: none;
     color:white;
+}
+
+.btn-projects-color {
+    background-color: #44197E;
+    border: 1px solid #44197E;
+}
+
+.search-border {
+    border: 1px solid #44197E;
+}
+
+.table-projects {
+    width: 100%;
+}
+
+.table-projects-head {
+    background-color: #2D1154;
+    color: white;
+    font-size: 16px;
+    height: 3rem;
+    text-align: center;
+}
+
+.table-projects-row1 {
+    background-color: #D8D8D8;
+    height: 3rem;
+    text-align: center;
+}
+
+.table-projects-row2 {
+    background-color: #ffffff;
+    height: 3rem;
+    text-align: center;
+}
+
+.table-projects-row-options {
+    display: flex;
+    flex-direction: row;
 }
